# game-template

./: .gitignore  build.sh  readme.md  start.sh
cmake/: CMakeLists.txt
src/: main.cpp
